# in-the-pocket

./: README.md  pyproject.toml
app/: asyncio_generator.py  audio_callback.py  audio_input.py  sound_device_exp.py  sound_recorder.py  stream_audio.py
