[tool.poetry]
name = "in-the-pocket"
version = "0.1.0"
description = "Application for analysing rhythmic accuracy."
authors = ["Jacob Rainbow <jacobrainbow@Jacobs-MacBook-Pro.local>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
sounddevice = "^0.4.5"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
